# sim-duckiebot-lanefollowing-demo

./: .gitignore  .gitmodules  DockerfileCatkin  README.md  lf_slim.launch
dolores_lane_filter/: CMakeLists.txt  README.md  dolores_lane_filter.py  package.xml
dolores_lane_filter/launch/: lane_filter_node.launch  lane_filter_tester.launch  lane_pose_visualizer_node.launch
dolores_lane_filter/src/: lane_filter_node.easy_node.yaml  lane_filter_node.py
scripts/: build_and_launch_sim.sh  launch_ros_monitor.sh  launch_sim.sh
