<?xml version="1.0"?>
<package>
  <name>dolores_lane_filter</name>
  <version>1.0.1</version>
  <description>Custom lane filter for the AIDO challenge. This is a modified version of the one in duckietown/Software</description>

  <maintainer email="philippe.lacaille@umontreal.ca">Philippe Lacaille</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>

</package>
